<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_sdbar_on"
            android:title="@string/home"/>
    <item
            android:id="@+id/nav_todayTrip"
            android:icon="@mipmap/ic_today_off"
            android:title="@string/today_s_trip" />
    <item
            android:id="@+id/nav_messages"
            android:icon="@mipmap/ic_msg_sdbar_off"
            android:title="@string/messages" />
    <item
            android:id="@+id/nav_myProfile"
            android:icon="@mipmap/ic_profile_sdbar_off"
            android:title="@string/my_profile" />
    <item
            android:id="@+id/nav_paymentSetting"
            android:icon="@mipmap/ic_payment_sdbar_off"
            android:title="@string/payment_settings" />
    <item
            android:id="@+id/nav_appSettings"
            android:icon="@mipmap/ic_settings_sdbar_off"
            android:title="@string/app_settings" />
    <item
            android:id="@+id/nav_aboutApp"
            android:icon="@mipmap/ic_icfo_sdbar_off"
            android:title="@string/about_app" />
</menu>