<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

            <com.utaliiguides.RobotoMediumTextView
                    android:id="@+id/txt_personalDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/enter_your_personal_details"/>

            <com.utaliiguides.RobotoRegularEditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/txt_personalDetails"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:maxLength="70"
                    android:hint="@string/hint_enter_name"/>

            //  male// female// other
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:padding="1dp"
                    android:background="@drawable/rounded_rectangle_orange_border"
                    app:layout_constraintTop_toBottomOf="@+id/et_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
            >

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_first_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/vieww1"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.utaliiguides.RobotoRegularTextView
                            android:id="@+id/tv_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:textColor="@color/colorBlack"
                            android:alpha=".8"
                            android:textSize="14sp"
                            android:text="MALE"
                    />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <View
                        android:id="@+id/vieww1"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        app:layout_constraintLeft_toRightOf="@+id/cl_first_male"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@color/colorPrimary"
                        app:layout_constraintRight_toLeftOf="@+id/cl_second_female"
                />

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_second_female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toRightOf="@+id/vieww1"
                        app:layout_constraintRight_toLeftOf="@+id/vieww2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.utaliiguides.RobotoRegularTextView
                            android:id="@+id/tv_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp"
                            android:alpha=".8"
                            android:text="FEMALE"
                    />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <View
                        android:id="@+id/vieww2"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        app:layout_constraintLeft_toRightOf="@+id/cl_second_female"
                        app:layout_constraintRight_toLeftOf="@+id/cl_third_other"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@color/colorPrimary"
                />

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_third_other"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toRightOf="@+id/vieww2"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.utaliiguides.RobotoRegularTextView
                            android:id="@+id/tv_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp"
                            android:alpha=".8"
                            android:text="OTHER"
                    />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>





            <com.utaliiguides.RobotoRegularEditText
                    android:id="@+id/et_dateOfBirth"
                    app:layout_constraintTop_toBottomOf="@+id/cl_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:textCursorDrawable="@color/colorPrimary"
                    android:textSize="14sp"
                    android:focusable="false"
                    android:editable="false"
                    android:singleLine="true"
                    android:hint="@string/text_date_of_birth"/>

            <ImageView
                    android:id="@+id/iv_calendar_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/et_dateOfBirth"
                    app:layout_constraintBottom_toBottomOf="@+id/et_dateOfBirth"
                    app:layout_constraintRight_toRightOf="@+id/et_dateOfBirth"
                    android:src="@mipmap/ic_dob_signup"
                    android:padding="12dp"
            />

            <com.utaliiguides.RobotoRegularEditText
                    android:id="@+id/et_email_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/et_dateOfBirth"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:maxLength="254"
                    android:hint="@string/hint_email"/>

            <com.utaliiguides.RobotoRegularEditText
                    android:id="@+id/et_mobileNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/et_email_id"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:singleLine="true"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="14sp"
                    android:inputType="phone"
                    android:layout_marginTop="15dp"
                    android:maxLength="15"
                    android:hint="@string/hint_mobile_number"/>

            <com.utaliiguides.RobotoRegularEditText
                    android:id="@+id/et_newPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/et_mobileNumber"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:singleLine="true"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp"
                    android:maxLength="30"
                    android:inputType="textPassword"
                    android:layout_marginTop="15dp"
                    android:hint="@string/hint_password"/>

            <com.utaliiguides.RobotoRegularEditText
                    android:id="@+id/et_reEnterNew_Password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/et_newPassword"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:singleLine="true"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="14sp"
                    android:maxLength="30"
                    android:layout_marginTop="15dp"
                    android:hint="@string/hint_confirm_password"/>

            <com.utaliiguides.RobotoMediumButton
                    android:id="@+id/btn_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/et_reEnterNew_Password"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="45dp"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/rounded_rect_orange"
                    android:text="@string/button_sign_up"/>

            <com.utaliiguides.RobotoRegularTextView
                    android:id="@+id/tv_txt_already_have_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_signUp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintRight_toLeftOf="@+id/tv_sign_in"
                    android:text="@string/text_already_have_an_account"/>

            <com.utaliiguides.RobotoRegularTextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/tv_txt_already_have_acc"
                    app:layout_constraintTop_toBottomOf="@+id/btn_signUp"
                    android:paddingLeft="10dp"
                    android:text="@string/text_sign_in"
                    android:textAllCaps="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>